--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -1,4 +1,4 @@
-.TH yoshimi 1 " 2025" "yoshimi 2.3.5"
+.TH yoshimi 1 " 2026" "yoshimi 2.3.6"
 .SH NAME
 yoshimi \- a software music synthesiser
 .SH SYNOPSIS
@@ -29,6 +29,8 @@ It is now possible to set different left/right Echo repeat rates.
 Part level MIDI 'Omni' now available. There is now a warning messages if action is taken that could overwrite an instrument that has unsaved edits made. The SubSynth engine now has a set of LFOs
 .PP
 LFOs have been added to the SUBsynth engine mastching thos in the other engine types.
+.PP
+Part kit mode now has crossfade Volume as well as Crossfade Velocity.
 .SH COMMANDS
 .TP
 .BR \-? ", " \-\-help " Shows command syntax."
